--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "^15.3.1",
     "react": "^18.2.0",
     "react-day-picker": "^9.3.2",
     "react-dom": "^18.2.0",
